Fixed clicks on iOS.

--- a/stylus/modules/global.styl
+++ b/stylus/modules/global.styl
@@ -1,5 +1,11 @@
 global-reset()
 
+html
+  overflow hidden
+
 body
   font-family 'Montserrat', sans-serif
   color #666
+  overflow hidden
+  width 100vw
+  height 100vh
